unpackaged/post_comexi/objects/Quote/fields/COMEXI_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Approval_Required__c</fullName>
    <description>Marca que el margen de la oferta cae por debajo del umbral y exige aprobación. Es la señal que la deal guidance da al vendedor antes de enviar la oferta, no después.</description>
    <inlineHelpText>Marcado si el margen exige aprobación del director.</inlineHelpText>
    <label>Requiere aprobación</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>