unpackaged/post_comexi/objects/Quote/fields/COMEXI_Blended_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Blended_Margin_Pct__c</fullName>
    <description>Margen combinado (blended) de la oferta. Base de la deal guidance y del criterio de aprobación.</description>
    <label>Blended Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>