unpackaged/post_comexi/objects/Quote/fields/COMEXI_Country_Risk_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Country_Risk_Pct__c</fullName>
    <description>Riesgo país aplicado sobre la oferta en función del destino de la intervención. Hoy es un criterio que vive en la cabeza del deal desk.</description>
    <inlineHelpText>Riesgo país aplicado según el destino de la intervención.</inlineHelpText>
    <label>Riesgo país %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>