unpackaged/post_comexi/objects/Quote/fields/COMEXI_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Discount_Pct__c</fullName>
    <description>Descuento aplicado por el vendedor sobre el precio de venta. Dispara la aprobación si supera el umbral.</description>
    <label>Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>