unpackaged/post_comexi/objects/Quote/fields/COMEXI_Document_Language__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Document_Language__c</fullName>
    <description>Idioma en el que se genera el documento de oferta, derivado del país del cliente. COMEXI oferta en varios idiomas y hoy elige la plantilla a mano.</description>
    <inlineHelpText>Idioma del documento de oferta.</inlineHelpText>
    <label>Idioma del documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>en_US</fullName>
                <label>English</label>
            </value>
            <value>
                <fullName>es</fullName>
                <label>Castellano</label>
            </value>
            <value>
                <fullName>ca</fullName>
                <label>Català</label>
            </value>
            <value>
                <fullName>fr</fullName>
                <label>Français</label>
            </value>
            <value>
                <fullName>de</fullName>
                <label>Deutsch</label>
            </value>
            <value>
                <fullName>it</fullName>
                <label>Italiano</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>