unpackaged/post_comexi/objects/Quote/fields/COMEXI_Down_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Amount__c</fullName>
    <description>Importe del anticipo derivado del porcentaje y del total de la oferta. Es la cifra que hoy se persigue por correo y que aquí queda en la oferta y en el documento generado.</description>
    <formula>IF(ISBLANK(COMEXI_Down_Payment_Pct__c), 0, TotalPrice * COMEXI_Down_Payment_Pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe del anticipo (calculado).</inlineHelpText>
    <label>Anticipo (importe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>