unpackaged/post_comexi/objects/Quote/fields/COMEXI_Down_Payment_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Pct__c</fullName>
    <description>Porcentaje de anticipo exigido en la oferta (30% en el escenario). Es la condición que después se convierte en hito de facturación y bloquea el arranque de ingeniería.</description>
    <inlineHelpText>Porcentaje de anticipo exigido al cliente.</inlineHelpText>
    <label>Anticipo %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>