unpackaged/post_comexi/objects/Quote/fields/COMEXI_Down_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Down_Payment_Status__c</fullName>
    <description>Estado del anticipo asociado a esta oferta. Hace visible en el registro una dependencia que hoy solo existe en cadenas de correo entre operaciones y finanzas.</description>
    <inlineHelpText>Estado del anticipo de esta oferta.</inlineHelpText>
    <label>Estado del anticipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Solicitado</fullName>
            </value>
            <value>
                <fullName>Cobrado</fullName>
            </value>
            <value>
                <fullName>Exencion autorizada</fullName>
                <label>Exención autorizada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>