unpackaged/post_comexi/objects/Quote/fields/COMEXI_Generated_By_Advisor__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Generated_By_Advisor__c</fullName>
    <description>Marca las ofertas originadas por el COMEXI Retrofit Advisor en lugar de creadas a mano. Permite medir cuánto pipeline de retrofit aporta el agente.</description>
    <inlineHelpText>Marcado si la oferta la generó el Retrofit Advisor.</inlineHelpText>
    <label>Generada por el Advisor</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>