unpackaged/post_comexi/objects/Quote/fields/COMEXI_Intervention_Country__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Country__c</fullName>
    <description>País de la intervención. Alimenta el riesgo país del escandallo y el idioma del documento de oferta.</description>
    <inlineHelpText>País donde se ejecuta la intervención.</inlineHelpText>
    <label>País de intervención</label>
    <length>60</length>
    <type>Text</type>
</CustomField>