unpackaged/post_comexi/objects/Quote/fields/COMEXI_Intervention_Hours__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Hours__c</fullName>
    <description>Horas totales de intervención ofertadas (montaje mecánico, instalación eléctrica y puesta en marcha). Resume en la cabecera lo que el grupo Intervención desglosa línea a línea.</description>
    <inlineHelpText>Horas totales de intervención ofertadas.</inlineHelpText>
    <label>Horas de intervención</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>