unpackaged/post_comexi/objects/Quote/fields/COMEXI_Intervention_Site__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Intervention_Site__c</fullName>
    <description>Planta del cliente donde se ejecuta la intervención. Es el dato que determina los gastos de desplazamiento y estancia del grupo Gastos de la oferta (en el escenario, Leeds).</description>
    <inlineHelpText>Planta donde se ejecuta la intervención.</inlineHelpText>
    <label>Planta de intervención</label>
    <length>120</length>
    <type>Text</type>
</CustomField>