unpackaged/post_comexi/objects/Quote/fields/COMEXI_Machine_Model__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Machine_Model__c</fullName>
    <description>Modelo comercial de la máquina objetivo, arrastrado del Asset. Evita teclear el modelo a mano en la oferta y en el documento generado.</description>
    <formula>IF(ISBLANK(COMEXI_Target_Asset__r.COMEXI_Machine_Model__c), &apos;&apos;, COMEXI_Target_Asset__r.COMEXI_Machine_Model__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Modelo de la máquina objetivo (calculado desde el Asset).</inlineHelpText>
    <label>Modelo de máquina</label>
    <type>Text</type>
</CustomField>