unpackaged/post_comexi/objects/Quote/fields/COMEXI_Margin_Amount__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Margin_Amount__c</fullName>
    <description>Margen en importe de la oferta (total menos coste). Complementa al Blended Margin %, que por sí solo no dice cuánto dinero deja la operación.</description>
    <formula>TotalPrice - COMEXI_Total_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Margen en importe de la oferta (calculado).</inlineHelpText>
    <label>Margen (importe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>