unpackaged/post_comexi/objects/Quote/fields/COMEXI_Margin_Threshold_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Margin_Threshold_Pct__c</fullName>
    <description>Umbral de margen por debajo del cual la oferta necesita aprobación del director de servicio. Hace explícita la regla que hoy se aplica por WhatsApp.</description>
    <inlineHelpText>Margen mínimo sin aprobación.</inlineHelpText>
    <label>Umbral de margen %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>