unpackaged/post_comexi/objects/Quote/fields/COMEXI_Offer_Version__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Offer_Version__c</fullName>
    <description>Número de versión de la oferta enviada al cliente. Sustituye al sufijo que hoy se teclea a mano en el nombre del fichero compartido.</description>
    <inlineHelpText>Versión de la oferta enviada al cliente.</inlineHelpText>
    <label>Versión de oferta</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>