unpackaged/post_comexi/objects/Quote/fields/COMEXI_RALF_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_RALF_Pct__c</fullName>
    <description>Porcentaje RALF aplicado por la procedura de precios (3,00% en el escandallo de COMEXI).</description>
    <inlineHelpText>Porcentaje RALF aplicado por la procedura de precios.</inlineHelpText>
    <label>RALF %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>