unpackaged/post_comexi/objects/Quote/fields/COMEXI_Representative_Commission_Amount__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Representative_Commission_Amount__c</fullName>
    <description>Importe de comisión del representante que se lleva esta oferta. Calculado sobre el total de la oferta, es el dato que hoy se recalcula a mano cada vez que cambia el descuento.</description>
    <formula>IF(ISBLANK(COMEXI_Representative_Commission_Pct__c), 0, TotalPrice * COMEXI_Representative_Commission_Pct__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Importe de comisión del representante (calculado).</inlineHelpText>
    <label>Comisión representante</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>