unpackaged/post_comexi/objects/Quote/fields/COMEXI_Representative_Commission_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Representative_Commission_Pct__c</fullName>
    <description>Comisión del representante aplicable a esta oferta (8% en el escenario). Se hereda de la cuenta pero se deja editable en la oferta porque el deal desk puede negociarla operación a operación.</description>
    <inlineHelpText>Comisión del representante aplicable a esta oferta.</inlineHelpText>
    <label>Comisión representante %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>