unpackaged/post_comexi/objects/Quote/fields/COMEXI_Retrofit_SKU__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Retrofit_SKU__c</fullName>
    <description>Código de catálogo del retrofit ofertado (por ejemplo T100 - UPDATE PC). Deja explícito en la cabecera de la oferta que el SKU procede del catálogo real y no de un código inventado.</description>
    <inlineHelpText>SKU del retrofit recomendado por el catálogo.</inlineHelpText>
    <label>SKU de retrofit</label>
    <length>30</length>
    <type>Text</type>
</CustomField>