unpackaged/post_comexi/objects/Quote/fields/COMEXI_Source_Case__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Caso de servicio que originó esta oferta de retrofit. Mantiene la trazabilidad caso -> oportunidad -> oferta sin depender de la oportunidad intermedia. El caso 174535 origina la oferta Retrofit T100.</description>
    <inlineHelpText>Caso de servicio del que nace esta oferta.</inlineHelpText>
    <label>Caso de origen</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Ofertas de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>