unpackaged/post_comexi/objects/Quote/fields/COMEXI_Target_Asset__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Máquina instalada (Asset) sobre la que se ejecuta el retrofit ofertado. Permite que la oferta y el documento generado hablen de la máquina concreta (MSC000600, Comexi Proslit S2 DS) sin navegar hasta la oportunidad.</description>
    <inlineHelpText>Máquina instalada objeto de esta oferta.</inlineHelpText>
    <label>Máquina objetivo</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ofertas de retrofit</relationshipLabel>
    <relationshipName>COMEXI_Retrofit_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>