unpackaged/post_comexi/objects/Quote/fields/COMEXI_Target_Intervention_Date__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Intervention_Date__c</fullName>
    <description>Fecha objetivo de la parada de línea propuesta en la oferta. Es la fecha que el cliente tiene que confirmar con producción antes de aceptar.</description>
    <inlineHelpText>Fecha objetivo de la parada de línea.</inlineHelpText>
    <label>Fecha objetivo de intervención</label>
    <type>Date</type>
</CustomField>