unpackaged/post_comexi/objects/Quote/fields/COMEXI_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Total_Cost__c</fullName>
    <description>Coste total de la oferta (suma de costes de línea del escandallo).</description>
    <label>Total Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>