unpackaged/post_comexi/objects/Quote/fields/COMEXI_Warranty_Uplift_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Warranty_Uplift_Pct__c</fullName>
    <description>Uplift de garantía aplicado por la procedura de precios (2,60% en el escandallo de COMEXI). Hacerlo visible en la oferta demuestra que el escandallo es configuración y no código.</description>
    <inlineHelpText>Uplift de garantía aplicado por la procedura de precios.</inlineHelpText>
    <label>Uplift garantía %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>